# mOpenMiner

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_coin.md
.github/workflows/: ci.yml  release.yml
.kiro/steering/: frontend.md  product.md  structure.md  tech.md
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  notifications.rs  tray.rs
apps/desktop/src/components/: ConsentDialog.tsx  CrashRecoveryDialog.tsx  SessionCard.tsx  Sidebar.tsx  StopButton.tsx
apps/desktop/src/hooks/: useTrayEvents.ts
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/pages/: About.tsx  Dashboard.tsx  Earnings.tsx  Logs.tsx  Pools.tsx  Profiles.tsx  Settings.tsx
apps/desktop/src/stores/: app.ts  sessions.ts
apps/desktop/src/styles/: globals.css
assets/checksums/: cpuminer-opt.json  xmrig.json
assets/coins/: btc.json  doge.json  erg.json  etc.json  flux.json  kas.json  ltc.json  rtm.json  rvn.json  schema.json  vrsc.json  xmr.json  zec.json
crates/core/: Cargo.toml
crates/core/src/: alert_store.rs  algo_routing.rs  benchmark.rs  config.rs  crash_recovery.rs  diagnostics.rs  lib.rs  mining_history.rs  plugin.rs  process.rs  remote.rs  session_manager.rs  telemetry.rs  thread_budget.rs
crates/miner_adapters/: Cargo.toml
crates/miner_adapters/src/: cpuminer_opt.rs  fake.rs  lib.rs  xmrig.rs
crates/pools/: Cargo.toml
crates/pools/src/: api.rs  health.rs  lib.rs  stratum.rs
docs/: DEVELOPMENT.md  LICENSING.md  LOCAL_DEVELOPMENT.md  MINERS.md  SANDBOX.md  THREAT_MODEL.md  TUNING.md  USAGE.md
scripts/: dev-setup.sh
