[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/core",
  "crates/miner_adapters",
  "crates/pools"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/openminedash"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
