[package]
name = "openminedash-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
tauri = { version = "1.5", features = [] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"
futures = "0.3"

openminedash-miner-adapters = { path = "../miner_adapters" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }
