[package]
name = "openminedash-miner-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-miners = []  # Enable fake miner adapters for testing

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
tauri = { version = "1.5", features = [] }
dirs = "5.0"
num_cpus = "1.16"
regex = "1.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }
